welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: not found: value c
else {avance(); if (getCouleurSol() == c) { test = true}
                                       ^